# artifacts/api-server/src/routes/index.ts
@@ -3,7 +3,8 @@ import healthRouter from "./health";
 import usersRouter from "./users";
 import likesRouter from "./likes";
 import premiumRouter from "./premium";
-import swipesRouter from "./swipes";
+import matchesRouter from "./matches";
+import messagesRouter from "./messages";
 
 const router: IRouter = Router();
 
@@ -11,6 +12,7 @@ router.use(healthRouter);
 router.use(usersRouter);
 router.use(likesRouter);
 router.use(premiumRouter);
-router.use(swipesRouter);
+router.use(matchesRouter);
+router.use(messagesRouter);
 
 export default router;
